--- a/README.html
+++ b/README.html
@@ -5,7 +5,7 @@
 Congratulations! You just built a plugin for QGIS!<br/><br />
 
 <div id='help' style='font-size:.9em;'>
-Your plugin <b>ImportWandsworth2</b> was created in:<br>
+Your plugin <b>TOMsImport</b> was created in:<br>
 &nbsp;&nbsp;<b>C:/Users/IO/AppData/Roaming/QGIS/QGIS3/profiles/default/python/plugins\import_wandsworth</b>
 <p>
 Your QGIS plugin directory is located at:<br>
